# azadi

./: .gitignore  Cargo.toml  Containerfile  LICENSE-MIT  LITERATE_ARCHITECTURE.md  README.adoc  README.md  TODO.adoc  flake.nix  justfile  resume.txt  rust-toolchain.toml  tarpaulin-for-claude.txt
.agent/skills/azadi_literate_programming/: SKILL.md
.agent/skills/weaveback_literate_programming/: SKILL.md
.github/workflows/: ci.yml  pages.yml  release.yml  workflows.adoc
chats/: consistent_refactoring.adoc  consistent_refactoring_old.adoc
cli-spec/: cli-spec.adoc
crates/azadi/: Cargo.toml
crates/azadi-cli/: Cargo.toml
crates/azadi-cli/src/: config.rs  lib.rs  main.rs  options.rs
crates/azadi-cli/src/pipeline/: error_macros.rs  mod.rs  tests.rs
crates/azadi-cli/src/tests/: main.rs
crates/azadi-cli/tests/: main_tests.rs
crates/azadi-core/src/: lib.rs
crates/azadi-macros/: Cargo.toml  build.rs
crates/azadi-macros/src/: macro_api.rs  types.rs
crates/azadi-macros/src/ast/: mod.rs  serialization.rs  tests.rs
crates/azadi-macros/src/evaluator/: builtins.rs  case_conversion.rs  core.rs  errors.rs  eval_api.rs  evaluator.rs  lexer_parser.rs  mod.rs  monty_eval.rs  output.rs  python.rs  rhai_eval.rs  source_utils.rs  state.rs
crates/azadi-macros/src/evaluator/tests/: mod.rs  test_ast_builder.rs  test_case_conversion.rs  test_case_modifiers.rs  test_def.rs  test_eval_api.rs  test_export.rs  test_here.rs  test_include.rs  test_include_silent.rs  test_macro_api.rs  test_macros.rs  test_output.rs  test_pydef.rs  test_python_evaluator.rs  test_python_evaluator_pyo3.rs  test_rhaidef.rs  test_skill_examples.rs  test_utils.rs  test_var.rs
crates/azadi-macros/src/lexer/: mod.rs  tests.rs
crates/azadi-macros/src/parser/: mod.rs
crates/azadi-macros/tests/: test_macro_cli.rs
crates/azadi-noweb/: Cargo.toml
crates/azadi-noweb/src/: db.rs  lib.rs  main.rs  noweb.rs  safe_writer.rs  safe_writer_test.rs
crates/azadi-noweb/src/tests/: advanced.rs  common.rs  safe_writer.rs  utils.rs
crates/azadi-noweb/tests/: integration_tests.rs  main_tests.rs
crates/azadi-noweb/tests/advanced/: mod.rs
crates/azadi-noweb/tests/basic/: mod.rs
crates/azadi-noweb/tests/cli/: mod.rs
crates/azadi-noweb/tests/common/: mod.rs  test_data.rs  utils.rs
crates/azadi-noweb/tests/safe_writer/: mod.rs
crates/azadi/src/: lookup.rs  main.rs  mcp.rs
crates/azadi/tests/: test_cli.rs  test_trace.rs
crates/wb-mcp/: Cargo.toml
crates/wb-mcp/src/: main.rs
crates/wb-mcp/src-wvb/: main.wvb
crates/wb-query/: Cargo.toml
crates/wb-query/src/: main.rs  tests.rs
crates/wb-query/src-wvb/: main.wvb
crates/wb-serve/: Cargo.toml
crates/wb-serve/src/: main.rs
crates/wb-serve/src-wvb/: main.wvb
crates/wb-tangle/: Cargo.toml
crates/wb-tangle/src/: main.rs  tests.rs
crates/wb-tangle/src-wvb/: main.wvb
crates/weaveback-agent-core/src/: apply.rs  change_plan.rs  lib.rs  read_api.rs  workspace.rs
crates/weaveback-agent-core/src/apply/: tests.rs
crates/weaveback-agent-core/src/read_api/: context.rs  db.rs  search.rs  tests.rs  trace.rs
crates/weaveback-api/: Cargo.toml
crates/weaveback-api/src/: apply_back.rs  coverage.rs  lib.rs  lint.rs  lookup.rs  lsp_runner.rs  mcp.rs  process.rs  query.rs  semantic.rs  tag.rs  tangle.rs
crates/weaveback-api/src-wvb/: apply_back.wvb  coverage.wvb  lookup.wvb  mcp.wvb  process.wvb  tangle.wvb
crates/weaveback-core/src/: lib.rs
crates/weaveback-docgen/: Cargo.toml  manifest.adoc
crates/weaveback-docgen/src/: adoc_scan.rs  args.rs  config.rs  d2.rs  error.rs  inject.rs  literate_index.rs  main.rs  plantuml.rs  render.rs  tests.rs  xref.rs  xref_cmd.rs
crates/weaveback-docgen/src-wvb/: inject.wvb  render.wvb  weaveback_docgen.wvb
crates/weaveback-lsp/src/: client.rs  lib.rs  nav.rs  registry.rs  tests.rs
crates/weaveback-lsp/src-wvb/: weaveback_lsp.wvb
crates/weaveback-macro/: Cargo.toml  manifest.adoc
crates/weaveback-macro/src/: lib.rs  line_index.rs  macro_api.rs  types.rs
crates/weaveback-macro/src-wvb/: macro_api.wvb
crates/weaveback-macro/tests/: test_macro_cli.rs
crates/weaveback-py/src/: lib.rs  tests.rs
crates/weaveback-serve/src/: lib.rs  tests.rs
crates/weaveback-serve/src-wvb/: weaveback_serve.wvb
crates/weaveback-tangle/: Cargo.toml  manifest.adoc
crates/weaveback-tangle/src/: block_parser.rs  db.rs  lib.rs  lookup.rs  main.rs  noweb.rs  safe_writer.rs
crates/weaveback-tangle/src-wvb/: block_parser.wvb  cli.wvb  db.wvb  safe_writer.wvb
crates/weaveback-tangle/tests/: main_tests.rs
divagations/azalsp/: language-configuration.json  package.json
divagations/azalsp/src/: extension.ts  server.ts
divagations/azantlr/: AzadiLexer.g4  CMakeLists.txt  cmake_debug.txt  ls_out.txt  main.cpp  version.txt
divagations/azare2c/: Makefile  azare2c  lexer.cpp  lexer.h  lexer.re  main.cpp
doc/: lexer.c.adoc
docs/: architecture.md  cli.adoc  cli.md  cli.wvb  complexity-reduction-next-steps.adoc  complexity-reduction-next-steps.md  complexity-reduction-next-steps.wvb  complexity-reduction-plan.md  index.md  m4-comparison.adoc  m4-comparison.md  m4-comparison.wvb  macro-language-critique-prep.md  macro-language.adoc  macro-language.md  macro-language.wvb  macros.md  markup-prelude.md  noweb.md  two-pass-markup-migration.md  why.adoc  why.md  why.wvb
docs/plans/: agent_source_lookup.md  project_backpropagate.md  project_macro_backprop.md
packaging/: PKGBUILD  update_pkgbuild.py  update_release.py
project/: project.adoc
scripts/audit/: check_wvb.py  wvb-summary.adoc  wvb_summary.md
test-data/: test-tilde.txt
test-data/macros/: builtins.adoc  examples.adoc.py  macros.adoc.py
test-data/test-c-project/: Taskfile  chunk.txt  enum.txt  project.txt  struct.txt  toyforth  unit.txt
tree-sitter-azadi/: grammar.js  package-lock.json  package.json  tree-sitter.json
tree-sitter-azadi/editors/helix/: asciidoc-injections.scm  install.py  install.sh  languages.toml
tree-sitter-azadi/editors/neovim/: azadi.lua  install.py
tree-sitter-azadi/queries/: highlights.scm  injections.scm
(+484 files in other folders)
