[workspace]
resolver = "2"
members = [
    "crates/azadi-macros",
    "crates/azadi-noweb",
    "crates/azadi-cli"
]

[workspace.package]
version = "0.1.0"
edition = "2021"
authors = ["Gianni Ferrarotti <gianni.ferrarotti@gmail.com>"]
license = "MIT OR Apache-2.0"

[workspace.dependencies]
# Shared dependencies
clap = { version = "4.4", features = ["derive"] }
thiserror = "1.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
regex = "1.9"
lazy_static = "1.4"
chrono = "0.4"

# Internal crate dependencies
azadi-macros = { path = "crates/azadi-macros" }
azadi-noweb = { path = "crates/azadi-noweb" }
