# Cargo.toml

[workspace]
resolver = "2"

members = [
    "crates/azadi-macros",
    "crates/azadi-noweb",
]

[workspace.package]
version = "0.1.0"
edition = "2021"
authors = ["Gianni Ferrarotti <gianni.ferrarotti@gmail.com>"]
license = "MIT OR Apache-2.0"

[workspace.dependencies]
# Shared dependencies, mandated for the entire workspace:
clap = { version = "4.4", features = ["derive"] }
thiserror = "2.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
regex = "1.9"
lazy_static = "1.4"
chrono = "0.4"


# PyO3 is mandatory for all crates that use it; we unify the version + features here:
pyo3 = { version = "0.28.1", features = [
  "auto-initialize",
  #"extension-module",
  "macros",
  #"embed",
] }

# Ensures consistent build config for all crates that compile Python extensions:
pyo3-build-config = "0.28.1"

# Other potential shared dependencies:
wasm-bindgen = "0.2.84"
tempfile = "3.8"

# Dev/test dependencies we might want across the workspace:
pretty_assertions = "1.4"
assert_cmd = "2.0"
predicates = "3.0"
escargot = "0.5"

# Internal crate dependencies (points to the sub-crate on disk)
azadi-macros = { path = "crates/azadi-macros" }
azadi-noweb = { path = "crates/azadi-noweb" }
