[package]
name = "azadi-cli"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
description = "CLI tool for Azadi macro and noweb pipeline"

[dependencies]
azadi-macros = { workspace = true }
azadi-noweb = { workspace = true }
clap = { workspace = true }
thiserror = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
toml = "0.8"

[dev-dependencies]
tempfile = "3.8"
pretty_assertions = "1.4"
assert_cmd = "2.0"
escargot = "0.5"
walkdir = "2.3"

[[bin]]
name = "azadi"
path = "src/main.rs"
