# crates/azadi-macros/Cargo.toml

[package]
name = "azadi-macros"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
description = "Core macro processing library for Azadi"
build = "build.rs"

[dependencies]
clap.workspace = true
thiserror.workspace = true
serde.workspace = true
serde_json.workspace = true
regex.workspace = true
lazy_static.workspace = true
chrono.workspace = true
pyo3.workspace = true
pyo3-build-config.workspace = true
wasm-bindgen.workspace = true
tempfile.workspace = true

[build-dependencies]
pyo3-build-config.workspace = true

[features]
default = []

[dev-dependencies]
pretty_assertions.workspace = true
assert_cmd.workspace = true
predicates.workspace = true
escargot.workspace = true

[[bin]]
name = "azadi-macro"
path = "src/bin/macro_cli.rs"
