# crates/azadi-macros/Cargo.toml

[package]
name = "azadi-macros"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
description = "Core macro processing library for Azadi"

[dependencies]
clap.workspace = true
thiserror.workspace = true
serde.workspace = true
serde_json.workspace = true
regex.workspace = true
lazy_static.workspace = true
chrono.workspace = true
rhai.workspace = true
monty.workspace = true
wasm-bindgen.workspace = true
tempfile.workspace = true

[dev-dependencies]
pretty_assertions.workspace = true
assert_cmd.workspace = true
predicates.workspace = true
escargot.workspace = true

[[bin]]
name = "azadi-macros"
path = "src/bin/azadi-macros.rs"
