# crates/azadi-noweb/Cargo.toml
[package]
name = "azadi-noweb"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
description = "A Rust implementation of noweb-style literate programming tool"

[dependencies]
azadi-macros = { workspace = true }
regex.workspace = true
lazy_static.workspace = true
chrono.workspace = true
clap.workspace = true

[dev-dependencies]
tempfile = "3.8"
pretty_assertions = "1.4"

[[bin]]
name = "azadi-noweb"
path = "src/main.rs"
